<resources>
    <string name="app_name">android-chat-app</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="conversations">Conversation</string>
    <string name="friends">Friend</string>
    <string name="all_friends">All Friend</string>
    <string name="recent_conversations">Recent Conversations</string>
    <string name="new_here_register">New Here? Register</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="email_address">Email Address</string>
    <string name="or_login_using_social_media">Or login using Social Media</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="create_nnew_account">Create \nNew Account</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="offline">Offline</string>
    <string name="cancel">Cancel</string>
    <string name="recommend_for_you">Recommend for you</string>
    <string name="write_your_message">Write your message</string>
</resources>