<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".activities.SignUpActivity">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_nnew_account"
            android:textSize="32sp"
            android:textStyle="bold"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/white"
            android:layout_marginStart="24dp"
            android:layout_marginTop="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_description"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:text="Register here"
            android:textSize="18sp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/white"
            android:layout_marginTop="16sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/layoutImage"/>


    <FrameLayout
        android:id="@+id/layoutImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="@id/text_title"
        app:layout_constraintEnd_toEndOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/background_image"
            android:scaleType="centerCrop"
            app:riv_oval="true"/>

        <TextView
            android:id="@+id/textAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_image"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10ssp"/>

    </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:textColorHint="@color/white"
            android:hint="@string/user_name"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:placeholderTextColor="@color/white"
            app:boxStrokeWidth="2dp"
            android:foregroundTint="@color/white"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/text_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="20sp"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColorHint="@color/white"
        android:hint="@string/email_address"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:placeholderTextColor="@color/white"
        app:boxStrokeWidth="2dp"
        android:foregroundTint="@color/white"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/layout_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="20sp"
            android:textColor="@color/white"
            android:textSize="17sp"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:placeholderTextColor="@color/white"
            app:boxStrokeWidth="2dp"
            android:foregroundTint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:textSize="17sp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="20sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/white"
            android:hint="@string/confirm_password"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:placeholderTextColor="@color/white"
            app:boxStrokeWidth="2dp"
            android:foregroundTint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_confirm_password"
                android:textSize="17sp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="20sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


    <FrameLayout
        android:id="@+id/frame_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_36sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_confirm_password">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/sign_up"
            android:textColor="@color/primary"
            android:backgroundTint="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:visibility="invisible"/>

    </FrameLayout>

        <TextView
            android:id="@+id/text_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_register"/>

</androidx.constraintlayout.widget.ConstraintLayout>

