<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    tools:context=".activities.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:background="@drawable/background_content_header"
        app:layout_constraintTop_toTopOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="@id/linear_selected"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_oval="true"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageSignOut"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/background_icon"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_logout"
            app:layout_constraintEnd_toEndOf="@id/linear_selected"
            app:layout_constraintTop_toTopOf="@id/imageProfile"
            app:layout_constraintBottom_toBottomOf="@id/imageProfile"
            app:tint="@color/white"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_search"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/background_icon"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_send"
            app:layout_constraintEnd_toStartOf="@id/imageSignOut"
            app:layout_constraintTop_toTopOf="@id/imageProfile"
            app:layout_constraintBottom_toBottomOf="@id/imageProfile"
            app:tint="@color/white"/>

        <TextView
            android:id="@+id/textName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imageProfile"
            app:layout_constraintEnd_toStartOf="@id/image_search"
            app:layout_constraintStart_toEndOf="@id/imageProfile"
            app:layout_constraintTop_toTopOf="@id/imageProfile"/>

        <LinearLayout
            android:id="@+id/linear_selected"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:background="@drawable/background_secondary"
            app:layout_constraintTop_toBottomOf="@id/imageProfile"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_conversations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_primary"
                android:textColor="@color/white"
                android:paddingHorizontal="22dp"
                android:paddingVertical="12dp"
                android:text="@string/conversations"
                android:textStyle="bold"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/text_friends"/>

            <TextView
                android:id="@+id/text_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:paddingHorizontal="30dp"
                android:paddingVertical="12dp"
                android:text="@string/friends"
                android:textColor="@color/secondary_text"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@id/text_conversations"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_conversations"
                app:layout_constraintTop_toTopOf="@id/text_conversations" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_header"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/conversationRecycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:padding="@dimen/_20sdp"
            android:background="@drawable/background_content_bottom"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center" />
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNewChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        android:backgroundTint="@color/primary"/>
</androidx.constraintlayout.widget.ConstraintLayout>